// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value if report is not present 1`] = `
<div
  className="css-1saiftj"
>
  <div
    className="css-1a0izfs"
  >
    ----
    <div
      className="css-5bzg50"
    >
      <div>
        label
      </div>
    </div>
  </div>
</div>
`;

exports[`defaults value if report.total is not present 1`] = `
<div
  className="css-1saiftj"
>
  <div
    className="css-1a0izfs"
  >
    ----
    <div
      className="css-5bzg50"
    >
      <div>
        label
      </div>
    </div>
  </div>
</div>
`;

exports[`report total is formated 1`] = `
<div
  className="css-1saiftj"
>
  <div
    className="css-1a0izfs"
  >
    formatedValue
    <div
      className="css-5bzg50"
    >
      <div>
        label
      </div>
    </div>
  </div>
</div>
`;
